# kling-waic-express

./: .gitignore  LICENSE  README.md  README_zh.md  build.gradle.kts  docker-compose-from-build.yml  docker-compose.yml  settings.gradle.kts
kling-printer/: .gitignore  CMakeLists.txt  ConnectPool.cpp  ConnectPool.h  HttpClient.cpp  HttpClient.h  Printer.cpp  Printer.h  PrinterManager.cpp  PrinterManager.h  README.md  ResultType.h  build.bat  crash_handler.cpp  crash_handler.h  httpMain.cpp  log.txt  main.cpp
proxy/: HELP.md  pom.xml
proxy/src/main/resources/: application.yml
server/: .gitignore  RESTART_GUIDE.md  build.gradle.kts  build_api_image.sh  docker-compose.yml  pom.xml  restart-api.sh  restart.sh  test-restart.sh
server/api/: Dockerfile  build_image.sh  docker-compose.yml  pom.xml  restart.sh
server/component/: pom.xml
server/main/kotlin/: App.kt  Application.kt
server/main/kotlin/controllers/: TaskController.kt  TokenController.kt
server/main/kotlin/entities/: TaskOutput.kt
server/main/kotlin/repositories/: TaskRepository.kt
server/printer/: .gitignore  create_app_bundled.sh  klingai-printer-logo.icns  pom.xml
server/src/main/kotlin/: Application.kt  WebConfig.kt
server/src/main/resources/: application.yml  logback-spring.xml  next-code.lua  style-image-prompts.txt  video-special-effects.txt
server/src/test/kotlin/: JedisClientTest.kt
server/src/test/resources/: application-test.yml
src/main/kotlin/entities/: Result.kt  Token.kt
src/main/kotlin/repositories/: TokenRepository.kt
web/: .dockerignore  .env  .env.prod  .env.staging  .prettierignore  Dockerfile  FORMATTING_SETUP.md  LICENSE  XIAOZHAO_THEME_GUIDE.md  build.sh  build_image.sh  entrypoint.sh  eslint.config.ts  index.html  nginx.conf  package.json  pnpm-lock.yaml  postcss.config.ts  vite.config.ts
web/public/: config.js
web/src/: App.vue  main.ts
web/src/api/: admin.ts  aspectRatioService.ts  castingService.ts  creation.ts  index.ts  screen.ts  type.ts
web/src/assets/font/: index.scss
web/src/components/: GuideOverlay.vue  IconSvg.vue  ImagePreview.vue  LangSwitcher.vue  Login.vue  LogoutButton.vue  NavBar.vue  Tab.vue  TabBar.vue  VideoPlayer.vue  VideoPreview.vue
web/src/composables/: useCreation.ts  useGuide.ts  useZoom.ts
web/src/constants/: index.ts
web/src/locales/: en-US.json  zh-CN.json
web/src/pages/: index.vue
web/src/pages/admin/: config.vue  image.vue  (+3 more)
web/src/router/: index.ts
web/src/stores/: mutation-type.ts
web/src/styles/: app.less  var.less
web/src/types/: auto-imports.d.ts  components.d.ts  typed-router.d.ts
web/src/utils/: confirm.ts  i18n.ts  inline-px-to-vw.ts  request.ts  set-page-title.ts  time.ts  url.ts
(+257 files in other folders)
